--- a/src/main/resources/com/erpinterns/java_erpinterns/HeadmasterForm.fxml
+++ b/src/main/resources/com/erpinterns/java_erpinterns/HeadmasterForm.fxml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml"
-          xmlns="http://javafx.com/javafx"
-          fx:controller="com.erpinterns.java_erpinterns.HeadMasterDepartment"
-          alignment="center"
-          hgap="10"
-          vgap="10"
->
-
-    <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-    <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-
-    <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-    <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-
-    <Label text="Phone:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-    <TextField fx:id="phoneField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-
-    <Button text="Add Headmaster" GridPane.columnIndex="1" GridPane.rowIndex="3" onAction="#addHeadmaster"/>
-</GridPane>
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.erpinterns.java_erpinterns.controllers.AjouterHeadMaster">
+    <children>
+        <Label layoutX="14.0" layoutY="21.0" text="Select User (Intern):" />
+        <ComboBox fx:id="cbUsers" layoutX="160.0" layoutY="17.0" prefWidth="200.0" promptText="Select User" />
+        <Label layoutX="14.0" layoutY="62.0" text="Professional Email:" />
+        <TextField fx:id="tfProfessionalEmail" layoutX="160.0" layoutY="58.0" prefWidth="200.0" />
+        <Label layoutX="14.0" layoutY="103.0" text="Protel:" />
+        <TextField fx:id="tfProtel" layoutX="160.0" layoutY="99.0" prefWidth="200.0" />
+        <Button layoutX="160.0" layoutY="149.0" mnemonicParsing="false" onAction="#addHeadmaster" text="Add Headmaster" />
+    </children>
+</AnchorPane>
